made slide transition smoother by using absolute positioning

--- a/README
+++ b/README
@@ -4,3 +4,4 @@
 - allow editing of links (edit description, add or remove tags, etc)
 - make Rails error messages completely custom
 - improve insane Tag Load on links#index
+- let users add email
